--- a/Day43/style.css
+++ b/Day43/style.css
@@ -1,32 +1,79 @@
-.box {
-    width: 300px;
-    height: 200px;
-    background-color: #000000;
-    color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    animation-name: pulse;
-    animation-duration: 1s;
-    animation-delay: 0.5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: both;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
+body{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f1f1f1;
 }
 
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
-    }
+.navbar {
+    background-color: #3498db;
+    color: white;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    overflow: hidden;
+    transition: width 0.3s;
 }
+
+.container:hover .navbar {
+width: 100vh;
+}
+
+.navbar a {
+    display: block;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    padding: 10px 15px;
+    border-bottom: 1px solid #555;
+    transition: background-color 0.3s;
+}
+
+.navbar a:hover {
+    background-color: rgb(35, 58, 77);
+    color: white;
+}
+
+.container {
+    width: 100px;
+    height: 100px;
+    background-color: #3498db;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: width 0.3s, transform 0.3s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container:hover {
+    width: calc(100vh - 20px);
+    transform: translate(-50%, -50%) rotate(10deg);
+}
+
+.content {
+    display: none;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container:hover .content {
+    display: block;
+    animation: fadeIn 0.5s ease forwards;
+}
+
+@keyframes fadeIn {
+    from {
+    opacity: 0;
+    }
+    to {
+    opacity: 1;
+    }
+    }
